2019-03-22  Araki Ken  <arakiken@users.sf.net>

	* configure.in: @UTMP_CFLAGS@ in vtemu/Makefile.in is replaced.

	* ui.h, ui_window.c:
	  - UI_RESIZE event type is added.
	  - If UI_RESIZE event is received, clear_margin_area() is called.

	* beos.cpp: 'width' and 'height' of MLWindow::FrameResized(),
	  MLWindow::ResizeTo() and MLView::ResizeTo() are treated as
	  'right - left' and 'bottom - top'.

2019-03-21  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c: Compiling error is fixed.

	* main-con.c, console/ui_display.c:
	  Whether IMAXBEL is defined or not is checked.

	* */Makefile.in: -lX11 is removed.

	* configure.in:
	  - "-lX11" is set to X_LIBS if X is found.
	  - utmp is checked and INSTALL_OPT is set after executing ./configure
	    at subdirs.

	* c_sixel.c:
	  Segfault in handling errors in load_sixel_from_data() is fixed.

2019-03-20  Araki Ken  <arakiken@users.sf.net>

	* ui_window.c: expose() exposes all screen even if
	  win->update_window_flag is 0 and force_expose is 1.

	* beos.cpp, beos.h:
	  - force_expose is added to arguments of draw_screen().
	  - force_expose is added to arguments of view_update().

	* configure.in: "gui" => "$gui"

2019-03-19  Araki Ken  <arakiken@users.sf.net>

	* ui_simple_sb_view.c: Drawing down side shade is fixed.

	* bl_unistd.c: __bl_setenv() considers 'overwrite' argument.

2019-03-18  Araki Ken  <arakiken@users.sf.net>

	* java/Makefile.in: Updated to Java 10 or later.

	* mlterm.c: Compiling error is fixed.

2019-03-17  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c: If libssh2_userauth_list() returns NULL but no error
	  happens, authentication is skipped.

	* README.ja: Updated.

	* im_iiimf_aux.c: Compiling error is fixed.

	* bl_util.[ch]: bl_base64_encode() is removed.

2019-03-17  Araki Ken  <arakiken@users.sf.net>

	* beos.cpp: Conflicting Control+a with B_HOME etc is fixed.

	* ui.h: 0xe0000 mask is set for XK_Home etc.

	* vt_util.[ch]: Removed.

	* bl_util.c:
	  - Added.